examples/invalid/exceptions.pak
-- INVALID: exceptions.pak
-- NOTE: This file is DOCUMENTATION ONLY. The bad code is commented out.
-- For actual failing test cases, see tests/invalid/ (verified by pak check).
-- Error: Pak has no exceptions. Use Result(Ok, Err).

-- WRONG: no try/catch/throw/raise
-- fn risky() {
--     throw MyException("bad")   -- does not exist
-- }
-- try {
--     risky()
-- } catch (e: MyException) {     -- does not exist
--     handle(e)
-- }

-- WRONG: no panic!/unwrap() style
-- fn get_value() -> i32 {
--     return some_result.unwrap()   -- no .unwrap()
-- }

-- CORRECT: explicit Result handling
enum AppError: u8 { io_error, parse_error }

fn risky() -> Result(i32, AppError) {
    return err(AppError.io_error)
}

fn caller() -> Result(i32, AppError) {
    let r = risky()
    match r {
        .err(e) => { return err(e) }
        .ok(v)  => { return ok(v + 1) }
    }
}

entry {
    let result = caller()
    match result {
        .ok(v)  => { let _ = v }
        .err(e) => { let _ = e }
    }
}
